# SST_Hackathon

./: Dockerfile  README.md  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  task_definitions.py  test_graders.py  validate-submission.sh
app/: __init__.py  main.py  models.py
server/: app.py
tasks/: __init__.py  graders.py
