[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"
 
[project]
name = "support-triage-openenv"
version = "1.0.0"
description = "Customer support ticket triage environment for AI agent training"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "customer-support", "nlp"]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "openai==1.54.4",
    "requests==2.32.3",
    "python-multipart==0.0.17",
]
 
[project.optional-dependencies]
dev = ["pytest", "httpx"]
 
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tasks*"]
 
[openenv]
name = "support-triage"
version = "1.0.0"
spec = "openenv.yaml"
entrypoint = "app.main:app"
port = 7860
 